Fix summary row jumping when reaching the bottom of the grid

--- a/style/row.less
+++ b/style/row.less
@@ -36,6 +36,9 @@
   position: -webkit-sticky;
   position: sticky;
   bottom: 0;
-  border-top: 2px solid darken(@borderColor, 20%);
   z-index: 3;
+
+  > .rdg-cell {
+    border-top: 2px solid darken(@borderColor, 20%);
+  }
 }
